# eden-cli

./: CHANGELOG.md  Cargo.toml  README.md  eden.schema.json  package.json
.changeset/: config.json  init.md  perky-rabbits-kneel.md
.github/workflows/: release.yml  sync.yml
src/: config.rs  main.rs  output.rs
src/checks/: binary.rs  env.rs  mod.rs
templates/: eden.json  eden.toml  eden.yaml
