[package]
name = "eden-cli"
version = "0.1.0"
edition = "2021"
authors = ["Omni <team@omni.dev>"]
description = "Developer onboarding preflight checks"
license = "MIT"
repository = "https://github.com/omnidotdev/eden-cli"
homepage = "https://eden.omni.dev"
keywords = ["cli", "developer-tools", "onboarding", "preflight", "checks"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "eden"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
serde_json = "1"
serde_yaml = "0.9"
json5 = "1.3"
colored = "3"
which = "8"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
